# mps_flask_api/user.py
@@ -1,5 +1,8 @@
 from datetime import datetime
-from flask import abort, make_response,jsonify
+from werkzeug.security import check_password_hash, generate_password_hash
+from flask import flash,abort, make_response,jsonify, redirect, url_for, request,g
+import database
+import json 
 
 def get_timestamp():
     return datetime.now().strftime(("%Y-%m-%d %H:%M:%S"))
@@ -22,27 +25,38 @@ USER = {
     }
 }
 
+session = USER['1000']
+
+
 def read_all():
     return jsonify(list(USER.values()))
 
 
 def create(user):
-    user_id = user.get("user_id")
-    user_name = user.get("user_name", "")
+    
+ 
+    if request.method == 'POST':
+        user_name = request.form['user_name']
+        password = request.form['password']
+        print(f"{user_name} + {password}" )
+        g.db = database.define_db()
+        db = g.db
+        error = None 
 
-    if user_id and user_id not in USER:
-        USER[user_id] = {
-            "user_id": user_id,
-            "user_name": user_name,
-            "timestamp": get_timestamp(),
-        }
-        return USER[user_id], 201
-    else:
-        abort(
-            406,
-            f"User with last name {user_id} already exists",
-        )
-
+        if error is None:
+            try:
+                db.cursor(dictionary=True).execute(
+                    "INSERT INTO users (username, password) VALUES(%s,%s)",
+                    (user_name, generate_password_hash(password)),
+                )
+                db.commit()
+                print("Success")
+            except:
+                error = f"Usuário {user_name} já registrado."
+                print(error)
+            else:
+                return redirect(url_for("/api.routes_web_page_index"))
+            
 
 def read_one(user_id):
     if user_id in USER:
@@ -76,3 +90,36 @@ def delete(user_id):
             404,
             f"Person with ID {user_id} not found"
         )
+
+
+def login():
+    if request.method == 'POST':
+        username = request.form['user_name']
+        password = request.form['password']
+        db = database.define_db().cursor(dictionary=True)
+        error = None
+        user = db.execute(
+            'SELECT * FROM users WHERE username = %s ', (username,)
+        )
+        user = db.fetchone()
+        
+        print(f'Trying to log in as {username } + {password}')
+        if user is None:
+            error = 'Nome de usuário incorreto.'
+        elif not check_password_hash(user['password'], password):
+            error = 'Senha incorreta.'
+        
+        if error is None:
+            session.clear()
+            session['user_id'] = user['id']
+            session['user_name'] = user['username']
+            
+            return redirect(url_for("/api.routes_web_page_index"))
+
+        flash(error)
+
+
+def logout():
+    session.clear()
+    return redirect(url_for('/api.routes_web_page_index'))
+
